prod-devel-rcar.yaml: Switch to Yocto Kirkstone
It is still based on Renesas BSP v5.9.0, but we really switch
from dunfell to kirkstone.

Below are versions of main meta-layers (I have tested against):

poky:
branch: kirkstone
commit: d3e3783973 manuals: document SPDX_PRETTY variable

meta-virtualization:
branch: kirkstone
commit: 79c584e openvswitch: backport patch to fix CVE-2022-4337 and CVE-2022-4338

meta-openembedded:
branch: kirkstone
commit: a9c25bef8 mariadb: Upgrade to 10.7.

meta-renesas:
branch: kirkstone-dev
commit: 644ccf2 Revert "rcar-gen3: gles-module: fix rc.pvr weston dependency"

meta-rcar (original):
branch: kirkstone-dev
commit: 511808a Revert "recipes-graphics: opencv 3.2: Use setuptools3 instead of distutils3"
meta-rcar (updated):
https://github.com/xen-troops/meta-rcar/commits/xt-master

It should be noted somewhere that additional apps need to be installed on the host:
sudo apt-get install zstd lz4 # for Ubuntu Focal or newer

TODO: Consider using commits (to fix versions) rather than branches for meta-layers
outside xen-troops.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -30,13 +30,13 @@ common_data:
   sources: &COMMON_SOURCES
     - type: git
       url: "https://git.yoctoproject.org/poky"
-      rev: dunfell
+      rev: kirkstone
     - type: git
       url: "https://git.openembedded.org/meta-openembedded"
-      rev: dunfell
+      rev: kirkstone
     - type: git
       url: "https://git.yoctoproject.org/meta-virtualization"
-      rev: dunfell
+      rev: kirkstone
     - type: git
       url: "https://github.com/xen-troops/meta-xt-common.git"
       rev: master
@@ -115,10 +115,10 @@ common_data:
     sources:
       - type: git
         url: "https://git.openembedded.org/meta-python2"
-        rev: dunfell
+        rev: kirkstone
       - type: git
         url: "https://github.com/kraj/meta-clang.git"
-        rev: dunfell
+        rev: kirkstone
       - type: git
         url: "ssh://git@gitpct.epam.com/epmd-aepr/img-proprietary"
         rev: "6ed789681c2867c7cae8b0150e093e1e2781797e"
@@ -195,10 +195,10 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/renesas-rcar/meta-renesas.git
-        rev: "dunfell-dev"
+        rev: "kirkstone-dev"
       - type: git
         url: https://git.yoctoproject.org/meta-selinux
-        rev: dunfell
+        rev: kirkstone
       - type: git
         url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
         rev: master
@@ -250,7 +250,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/renesas-rcar/meta-renesas.git
-        rev: "dunfell-dev"
+        rev: "kirkstone-dev"
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
@@ -453,7 +453,7 @@ parameters:
             sources:
               - type: git
                 url: "https://github.com/xen-troops/meta-rcar.git"
-                rev: Renesas-Yocto-v5.9-dunfell-dev
+                rev: xt-master
             builder:
               layers:
                 - "../meta-rcar/meta-rcar-gen3-adas"
